<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up.OtpActivity">
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLogInwithpho"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        style="@style/groupStylewhite_A700">
        <ImageButton
            android:background="@drawable/rectangle_bg_bluegray_100_0f_border_gray_300_radius_25"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_50pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="@dimen/_50pxh"
            android:paddingHorizontal="@dimen/_18pxh"
            android:paddingVertical="@dimen/_18pxv"
            android:scaleType="fitCenter"
            android:contentDescription = "Back"
            android:src="@drawable/img_arrowleft"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/txtEntercode"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            style="@style/txtPoppinsbold30"
            tools:text="Enter code"/>

        <TextView android:id="@+id/txtSentSms"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            style="@style/txtInterregular16_1"
            tools:text="@string/msg_we_ve_sent_an_s"/>

        <com.chaos.view.PinView
            android:id="@+id/otpViewOtpview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_otp_here"
            android:inputType="number"
            android:textColor="@color/black_900"
            android:textSize="@dimen/_32pxh"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineWidth="1dp"/>

        <TextView
            android:id="@+id/txtResend"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:singleLine="true"
            style="@style/txtIntersemibold16_1"
            tools:text="@string/lbl_resend"/>


        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:indeterminateTint="@color/deep_purple_400"
            android:layout_gravity="center"
            android:id="@+id/login_progress_bar"/>

        <FrameLayout android:id="@+id/frameStackverify"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_56pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_50pxv" android:layout_width="@dimen/_353pxh">
            <TextView android:ellipsize="end"
                android:id="@+id/txtVerify"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_153pxh"
                android:layout_marginStart="@dimen/_153pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                style="@style/txtIntersemibold16" tools:text="@string/lbl_verify"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end"
                android:gravity="center"
                android:id="@+id/btnVerifyOne"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_verify"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1"
                tools:text="@string/lbl_verify"/>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>