<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:gravity="start"
        android:id="@+id/linearResetpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageButton
            android:background="@drawable/rectangle_bg_bluegray_100_0f_border_gray_300_radius_25"
            android:id="@+id/btnArrowleft"
            android:layout_height="@dimen/_50pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="@dimen/_50pxh"
            android:paddingHorizontal="@dimen/_18pxh"
            android:paddingVertical="@dimen/_18pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_arrowleft"
            android:contentDescription="Back button"
            tools:ignore="ContentDescription"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtResetpassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            style="@style/txtPoppinsbold30"
            tools:text="@string/lbl_reset_password"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPleasetypesom"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            style="@style/txtInterregular16_1"
            tools:text="@string/msg_please_type_som"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textSize="18sp"
                android:textColor="#6C5DD2"/>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edit"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter Your Password"
                android:textColorHint="#707070"
                android:gravity="center"
                android:textColor="#707070"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_new_password"
                android:textSize="18sp"
                android:textColor="#6C5DD2"/>

            <EditText
                android:id="@+id/editNewPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edit"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/msg_must_be_8_chara"
                android:textColorHint="#707070"
                android:gravity="center"
                android:textColor="#707070"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm new password"
                android:textSize="18sp"
                android:textColor="#6C5DD2"/>

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_edit"
                android:ems="10"
                android:inputType="text"
                android:hint="Repeat Your Password"
                android:textColorHint="#707070"
                android:gravity="center"
                android:textColor="#707070"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnResetPasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_52pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@string/lbl_reset_password"
            android:textAllCaps="false"
            style="@style/btnSolidRounded_1"
            tools:text="@string/lbl_reset_password"/>

        <TextView
            android:id="@+id/txtConfirmation"
            style="@style/txtInterregular14_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_148pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:singleLine="true"
            tools:ignore="TextSizeCheck"
            tools:text="@string/msg_already_have_an3" />
    </LinearLayout>
</layout>
