<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearResetpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    style="@style/groupStylewhite_A700">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <TextView
        android:id="@+id/txtResetpassword"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20pxh"
        android:layout_marginStart="@dimen/_20pxh"
        android:layout_marginTop="@dimen/_51pxv"
        android:layout_width="match_parent"
        style="@style/txtPoppinsbold30"
        android:text="@string/lbl_reset_password"/>
    <TextView
        android:id="@+id/txtPleasetypesom"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/_8pxv"
        android:layout_width="match_parent"
        style="@style/txtInterregular16_1"
        android:text="@string/msg_please_type_som"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="#6C5DD2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_edit"
            android:ems="10"
            android:paddingStart="20dp"
            android:hint="Enter Your Password"
            android:inputType="textPassword"
            android:textColor="#707070"
            android:textColorHint="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

        <ImageButton
            android:id="@+id/btnTogglePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_hide_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_new_password"
            android:textColor="#6C5DD2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_edit"
            android:ems="10"
            android:paddingStart="20dp"
            android:hint="@string/msg_must_be_8_chara"
            android:inputType="textPassword"
            android:textColor="#707070"
            android:textColorHint="#707070"
            app:layout_constraintTop_toBottomOf="@+id/textNewPassword"
            tools:layout_editor_absoluteX="0dp" />

        <ImageButton
            android:id="@+id/btnToggleNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_hide_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNewPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm new password"
            android:textColor="#6C5DD2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_edit"
            android:ems="10"
            android:hint="Repeat Your Password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="#707070"
            android:textColorHint="#707070"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textConfirmPassword" />

        <ImageButton
            android:id="@+id/btnToggleConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_hide_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textConfirmPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:ellipsize="end" android:gravity="center"
        android:id="@+id/btnResetPasswordOne"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15pxh"
        android:layout_marginStart="@dimen/_15pxh"
        android:layout_marginTop="@dimen/_52pxv"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/_18pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_18pxv"
        android:singleLine="true"
        android:text="@string/lbl_reset_password"
        android:textAllCaps="false"
        style="@style/btnSolidRounded_1"
        tools:text="@string/lbl_reset_password"/>

</LinearLayout>